--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="underscore.v1.6.0.min.js"></script>
 </head>
 <body>
+    <h1>Knight's Tour</h1>
+    <a href="http://en.wikipedia.org/wiki/Knight's_tour">description</a>
     <div class="board">
         <div class="knight"><div class="knight-body"></div></div>
     </div>
